<resources>
    <string name="app_name">R-tificial Trainer</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Enter athlete name</string>
    <string name="ath_det_name">Details</string>
    <string name="add_title">Add</string>
    <string name="delete_title">Delete</string>
    <string name="ath_name">Athletes</string>
    <string name="hint_name">Name:</string>
    <string name="hint_surname">Surname:</string>
    <string name="ath_form_name">Add athlete</string>
    <string name="edit_title">Edit</string>
    <string name="pr_name">Result prediction</string>
    <string name="form_model_spinner">Select model</string>
    <string name="resultHeader">Result:</string>
    <string name="sendTrainingBtn">Send training</string>
    <string name="predictBtn">Predict result</string>
    <string name="evaluateBtn">Evaluate</string>
    <string name="formHeader">Enter data:</string>
    <string name="modelHeader">Select model:</string>
    <string name="athleteHeader">Athlete</string>
    <string name="athleteBtn">Select athlete</string>
    <string name="radioYes">Yes</string>
    <string name="radioNo">No</string>
    <string name="athleteActBtn">Athletes</string>
    <string name="trainingGenActBtn">Training generation</string>
    <string name="resultPredActBtn">Result prediction</string>
    <string name="emptyAthListText">No athletes in the database...</string>
    <string name="hintSex">Sex:</string>
    <string name="radioWoman">Woman</string>
    <string name="radioMan">Man</string>
    <string name="hintBirth">Birthday:</string>
    <string name="hintWeight">Weight [kg]:</string>
    <string name="hintHeight">Height [m]:</string>
    <string name="hintRecord">Current result:</string>
    <string name="hintEmail">Email:</string>
    <string name="addAthBtn">Add athlete</string>
    <string name="saveChangeBtn">Save changes</string>
    <string name="restoreDefBtn">Restore defaults</string>
    <string name="clearFormBtn">Clear form</string>
    <string name="hintAge">Age:</string>
    <string name="hintBmi">BMI:</string>
    <string name="appDirName">R-tificial Trainer</string>
    <string name="modelDirName">Models</string>
    <string name="pdfDirName">Last training</string>
    <string name="aboutName">About application</string>
    <string name="aboutBtnTxt">About application</string>
    <string name="timePickerUrl">https://github.com/IvanKovac/TimePickerWithSeconds</string>
    <string name="androidChartUrl">https://github.com/PhilJay/MPAndroidChart</string>
    <string name="jpmmlAndroidUrl">https://github.com/jpmml/jpmml-android</string>
    <string name="round_result_text">Round output values</string>
    <string name="about_text1">Application in the context of diploma thesis</string>
    <string name="about_text2">\'\'Mobile system for training support\'\'</string>
    <string name="about_text3">created by:\n\n</string>
    <string name="about_text4">The R-tificial Trainer application generates results based on user-selected predictive models.\n\nThe models are stored in the device memory in the directory: \n\'R-tificial Trainer/Models\'\n\n\nThe application uses the following libraries:\n</string>
    <string name="radio_text_form">Text:</string>
    <string name="model_dir_info_cont">This directory stores .prm and .gtm files with predictive models.</string>
    <string name="pdf_dir_info_cont">This directory stores recently generated file with training.</string>
    <string name="permission_alert_text">The application requires access to the device memory. Retry attempt to grant permissions?</string>
    <string name="alert_pos_btn">Yes</string>
    <string name="alert_neg_btn">No</string>
    <string name="select_ath_text">Select athlete</string>
    <string name="read_error_toast">Athlete data reading error!</string>
    <string name="del_ath_confirm_msg">Are you sure you want to delete athlete data?</string>
    <string name="del_mult_ath_confirm_msg">"Are you sure you want to delete "</string>
    <string name="del_mult_ath_confirm_msg_ending">" athletes data?"</string>
    <string name="del_ath_err_msg">Delete error!</string>
    <string name="del_ath_succes_msg">Athlete deleted</string>
    <string name="del_mult_ath_succ_msg">"Delete of "</string>
    <string name="del_mult_ath_succ_msg_ending">" athletes completed"</string>
    <string name="bar_select_ath_counter">"Selected: "</string>
    <string name="clear_form_confirm_txt">Are you sure you want to clear form?</string>
    <string name="add_athlete_error_txt">Error while attempting to add athlete!</string>
    <string name="add_athlete_succ_txt">Athlete added</string>
    <string name="ath_already_actual_msg">Data are up to date now!</string>
    <string name="db_error_msg">Database error!</string>
    <string name="ath_updated_msg">Athlete data updated</string>
    <string name="fill_all_fields_error_msg">Fill out the entire form</string>
    <string name="record_value_error">Time can not be equal to 00:00:00.00</string>
    <string name="age_value_error">Age should be at least 5 years</string>
    <string name="name_value_error">Name should consist only of letters</string>
    <string name="surname_value_error">Surname should consist only of letters</string>
    <string name="weight_value_error">Weight can not be equal to 0</string>
    <string name="height_value_0_error">Height can not be equal to 0</string>
    <string name="height_value_error">Height can not be greater than 3[m]</string>
    <string name="email_value_error">Invalid email address</string>
    <string name="confirm_restore_form_msg">Are you sure you want to restore default data?</string>
    <string name="confirm_modify_form_msg">Are you sure you want to update data?</string>
    <string name="loading_data_err_msg">Athlete details data reading error</string>
    <string name="details_woman">Woman</string>
    <string name="details_man">Man</string>
    <string name="time_centy_format">[time]</string>
    <string name="datatype_error_msg">"Invalid data type of input "</string>
    <string name="input_error_msg">"Invalid value of input "</string>
    <string name="evaluator_error_msg">"Evaluator error: "</string>
    <string name="amount_format">[amount]</string>
    <string name="output_datatype_error">"Invalid data type of output "</string>
    <string name="output_datatype_error_ending">". Returned value: "</string>
    <string name="model_acces_error">Error while attempting to access selected model file</string>
    <string name="eval_create_error">Can not create evaluator for selected model file</string>
    <string name="form_create_error">Error while attempting to create form</string>
    <string name="model_not_found_error">Not found a model that matches that used when generating training. Please upload .prm model file with name matching to .gtm model file.</string>
    <string name="no_models_error">"Can not find model files in format "</string>
    <string name="unsupported_type">"Unsupported type: "</string>
    <string name="unsupported_type2">Unsupported input type</string>
    <string name="out_off_interval">Value out of interval:\n</string>
    <string name="infinity_str">infin.</string>
    <string name="fill_data_sex">sex</string>
    <string name="chosen_ath_label">"Selected: "</string>
    <string name="ath_pdf_text">"Athlete: "</string>
    <string name="age_pdf_text">"Age: "</string>
    <string name="training_plan_pdf_text">"Training plan: "</string>
    <string name="training_pdf_text">Training</string>
    <string name="predicted_result_pdf_text">Predicted result</string>
    <string name="pdf_file_name">Training plan.pdf</string>
    <string name="mail_subject">Training plan</string>
    <string name="mail_text">Attachment contains traing plan in PDF format. Best regards</string>
    <string name="mail_intent_prompt">Send Email</string>
    <string name="gtModeActionBar">Training generation</string>
    <string name="setTimePickerBtn">Set time</string>
    <string name="cancelTimePickerBtn">Cancel</string>
    <string name="addFormActionBar">Add athlete</string>
    <string name="editFormActionBar">Edit athlete</string>
    <string name="dataType_create_error">"Undefined dataType for field: "</string>
</resources>
