<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.dell.rtificialtrainer.EvaluateActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/chose_ath_butt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/athleteBtn"
            android:onClick="chooseAthlete"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="15dp">

            <TextView
                android:id="@+id/choosen_ath"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/athleteHeader"
                android:textAlignment="center"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="18sp"
                android:visibility="gone"
                android:layout_weight="1"/>

            <ImageButton
                android:id="@+id/remove_ath_butt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_notification_clear_all"
                android:visibility="gone"
                android:background="@android:color/transparent"
                android:onClick="removeAthlete"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/colorAccent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/modelHeader"
            android:textAlignment="center"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="18sp"
            android:paddingTop="5dp"/>

        <Spinner
            android:id="@+id/model_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog"
            android:prompt="@string/form_model_spinner"/>

        <Switch
            android:id="@+id/roundSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/round_result_text"
            android:paddingBottom="5dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/colorAccent" />

        <TextView
            android:id="@+id/form_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/formHeader"
            android:textAlignment="center"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="18sp"
            android:paddingTop="5dp"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/FormInputContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="15dp"
            android:animateLayoutChanges="true">
        </LinearLayout>
    <Button
        android:id="@+id/form_evaluate_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/evaluateBtn"
        android:visibility="gone"
        android:onClick="onEvaluateBtnClick"/>

        <Button
            android:id="@+id/form_gopredict_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/predictBtn"
            android:visibility="gone"
            android:onClick="onGoToPredictClick"/>

        <Button
            android:id="@+id/pdf_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sendTrainingBtn"
            android:visibility="gone"
            android:onClick="onPdfGenerateClick"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/colorAccent" />
        <TextView
            android:id="@+id/form_output_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resultHeader"
            android:textAlignment="center"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="18sp"
            android:paddingTop="5dp"
            android:visibility="gone"/>
        <LinearLayout
            android:id="@+id/FormOutputContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ChartContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:animateLayoutChanges="true"
            android:visibility="gone">

        </LinearLayout>
    </LinearLayout>
    </ScrollView>
</LinearLayout>

