<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:layout_gravity="center_vertical"
    tools:context="com.example.dell.rtificialtrainer.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        >

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/athleteActBtn"
            android:textSize="12sp"
            android:layout_weight="1"
            android:drawableLeft="@mipmap/ic_main_athletes"
            android:onClick="onAthletesBtnClick" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/trainingGenActBtn"
            android:textSize="12sp"
            android:layout_weight="1"
            android:drawableLeft="@mipmap/ic_main_training"
            android:onClick="onTrainingBtnClick"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        >

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/resultPredActBtn"
            android:textSize="12sp"
            android:layout_weight="1"
            android:drawableLeft="@mipmap/ic_main_result"
            android:onClick="onResultBtnClick" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/aboutBtnTxt"
            android:textSize="12sp"
            android:layout_weight="1"
            android:drawableLeft="@mipmap/ic_main_about"
            android:onClick="onAboutBtnClick" />

    </LinearLayout>
</LinearLayout>
